--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         .container {
             position: relative;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
