--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+       background-image: url('Papyrus.svg'); /* Replace with your image */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
     }
         /* Ensure the container takes up the full viewport height */
         .container {
@@ -25,10 +29,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-image: url('Papyrus.svg'); /* Replace with your image */
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
+          
         }
 
         /* Style the table and make it responsive */
