--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Table on Image</title>
+    <title>عروض قاعة المؤتمرات</title>
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap');
 
@@ -12,31 +12,21 @@
       margin: 0;
       padding: 0;
       background-color: #381515;
-      display: flex;
       justify-content: center;
       align-items: center;
+      display:flex;
+      flex-direction: column;
       height: 100vh;
        background-image: url('Papyrus.svg'); /* Replace with your image */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
     }
-        /* Ensure the container takes up the full viewport height */
-        .container {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-           
-        }
-
+  
         /* Style the table and make it responsive */
         table {
             width: 90%;
             max-width: 800px;
-            border-collapse: collapse;
             text-align: center;
             line-height: 60px;
         }
@@ -45,6 +35,7 @@
             padding: 10px;
             font-size: 24px;
             font-weight: bold;
+            border: 1px solid #000;
         }
 
 
@@ -69,7 +60,6 @@
     </style>
 </head>
 <body>
-    <div class="container">
         <h1 style="direction: rtl; font-size: 40px;">مواعيد العروض</h1>
         <table>
             <tr>
@@ -97,6 +87,5 @@
               </td>
             </tr>
           </table>
-    </div>
 </body>
-</html>
+</html> 
