--- a/index.html
+++ b/index.html
@@ -87,5 +87,8 @@
               </td>
             </tr>
           </table>
+             
+<br><img src="psc logo.svg" style="width: 40%;">
+
 </body>
 </html> 
