--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
         <h1 style="direction: rtl; font-size: 40px;">مواعيد العروض</h1>
         <table>
             <tr>
-              <td>١١ صباحا - ١ مساءا</td>
+              <td>١٠:٠٠ - ١١:٠٠ صباحا</td>
               <td style="line-height: 25px;">
-              عرض المسرح الأسود
+              <h2 style="font-weight: bolder;"> عرض المسرح الأسود </h2>
               <br> القاعة الكبرى
                 <br>(جميع الفئات العمرية)
               </td>
             </tr>
             <tr>
-              <td>١١ صباحا -١٢ ظهرا</td>
+              <td>١١:٠٠ صباحا - ١٢:٠٠ ظهرا</td>
               <td style="line-height: 25px;">
               العرض التفاعلي: الرحلة
               <br> قاعة الأغراض المتعددة
@@ -79,7 +79,7 @@
               </td>
             </tr>
             <tr>
-              <td>١:٠٠  -٢ ظهرا</td>
+              <td>١:٠٠  - ٢:٠٠ ظهرا</td>
               <td style="line-height: 25px;">
               العرض التفاعلي: الرحلة
               <br> قاعة الأغراض المتعددة
