--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <tr>
               <td>١٠:٠٠ - ١١:٠٠ صباحا</td>
               <td style="line-height: 25px;">
-              <h2 style="font-weight: bolder;"> عرض المسرح الأسود </h2>
-              <br> القاعة الكبرى
-                <br>(جميع الفئات العمرية)
+               عرض المسرح الأسود
+              <br> <p style="font-weight: normal;"> القاعة الكبرى
+                <br>(جميع الفئات العمرية) </p>
               </td>
             </tr>
             <tr>
