--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <tr>
               <td>١٠:٠٠ - ١١:٠٠ صباحا</td>
               <td style="line-height: 25px;">
-               عرض المسرح الأسود
-              <br> <p style="font-weight: normal;"> القاعة الكبرى
+               <h2>عرض المسرح الأسود</h2>
+              <br> <p style="font-weight: 600;"> القاعة الكبرى
                 <br>(جميع الفئات العمرية) </p>
               </td>
             </tr>
@@ -74,16 +74,16 @@
               <td>١١:٠٠ صباحا - ١٢:٠٠ ظهرا</td>
               <td style="line-height: 25px;">
               العرض التفاعلي: الرحلة
-              <br> قاعة الأغراض المتعددة
-                <br>(المرحلة الاعدادية والثانوية)
+              <br> <p style="font-weight: 600;"> قاعة الأغراض المتعددة
+                <br>(المرحلة الاعدادية والثانوية) </p>
               </td>
             </tr>
             <tr>
               <td>١:٠٠  - ٢:٠٠ ظهرا</td>
               <td style="line-height: 25px;">
               العرض التفاعلي: الرحلة
-              <br> قاعة الأغراض المتعددة
-                <br>(المرحلة الاعدادية والثانوية)
+              <br> <p style="font-weight: 600;"> قاعة الأغراض المتعددة
+                <br>(المرحلة الاعدادية والثانوية) </p>
               </td>
             </tr>
           </table>
