--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <tr>
               <td>١٠:٠٠ - ١١:٠٠ صباحا</td>
               <td style="line-height: 25px;">
-               <h2>عرض المسرح الأسود</h2>
-              <br> <p style="font-weight: 600;"> القاعة الكبرى
+               عرض المسرح الأسود
+              <br> <p style="font-weight: 500;"> القاعة الكبرى
                 <br>(جميع الفئات العمرية) </p>
               </td>
             </tr>
@@ -74,7 +74,7 @@
               <td>١١:٠٠ صباحا - ١٢:٠٠ ظهرا</td>
               <td style="line-height: 25px;">
               العرض التفاعلي: الرحلة
-              <br> <p style="font-weight: 600;"> قاعة الأغراض المتعددة
+              <br> <p style="font-weight: 400;"> قاعة الأغراض المتعددة
                 <br>(المرحلة الاعدادية والثانوية) </p>
               </td>
             </tr>
@@ -82,7 +82,7 @@
               <td>١:٠٠  - ٢:٠٠ ظهرا</td>
               <td style="line-height: 25px;">
               العرض التفاعلي: الرحلة
-              <br> <p style="font-weight: 600;"> قاعة الأغراض المتعددة
+              <br> <p style="font-weight: 300;"> قاعة الأغراض المتعددة
                 <br>(المرحلة الاعدادية والثانوية) </p>
               </td>
             </tr>
