--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         th, td {
             padding: 10px;
             font-size: 24px;
-            font-weight: bold;
             border: 2px solid #000;
         }
 
@@ -64,26 +63,26 @@
         <table>
             <tr>
               <td>١٠:٠٠ - ١١:٠٠ صباحا</td>
-              <td style="line-height: 25px; justify-content= center;">
-               عرض المسرح الأسود
-              <br> <p style="font-weight: 550;"> القاعة الكبرى
-                <br>(جميع الفئات العمرية) </p>
+              <td style="line-height: 25px;">
+               <b>عرض المسرح الأسود</b>
+              <br> القاعة الكبرى
+                <br>(جميع الفئات العمرية)
               </td>
             </tr>
             <tr>
               <td>١١:٠٠ صباحا - ١٢:٠٠ ظهرا</td>
               <td style="line-height: 25px;">
-              العرض التفاعلي: الرحلة
-              <br> <p style="font-weight: 500;"> قاعة الأغراض المتعددة
-                <br>(المرحلة الاعدادية والثانوية) </p>
+              <b>"العرض التفاعلي: "الرحلة</b>
+              <br> قاعة الأغراض المتعددة
+              <br>(المرحلة الاعدادية والثانوية)
               </td>
             </tr>
             <tr>
               <td>١:٠٠  - ٢:٠٠ ظهرا</td>
               <td style="line-height: 25px;">
-              العرض التفاعلي: الرحلة
-              <br> <p style="font-weight: 500;"> قاعة الأغراض المتعددة
-                <br>(المرحلة الاعدادية والثانوية) </p>
+              <b>"العرض التفاعلي: "الرحلة</b>
+              <br> قاعة الأغراض المتعددة
+                <br>(المرحلة الاعدادية والثانوية)
               </td>
             </tr>
           </table>
