--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1 style="direction: rtl; font-size: 40px;">مواعيد العروض</h1>
         <table>
             <tr>
-              <td>١٠:٠٠ - ١١:٠٠ صباحا</td>
+              <td><b>١٠:٠٠ - ١١:٠٠ صباحا</b></td>
               <td style="line-height: 25px;">
                <b>عرض المسرح الأسود</b>
               <br> القاعة الكبرى
@@ -70,7 +70,7 @@
               </td>
             </tr>
             <tr>
-              <td>١١:٠٠ صباحا - ١٢:٠٠ ظهرا</td>
+              <td><b>١١:٠٠ صباحا - ١٢:٠٠ ظهرا</b></td>
               <td style="line-height: 25px;">
               <b>"العرض التفاعلي: "الرحلة</b>
               <br> قاعة الأغراض المتعددة
@@ -78,7 +78,7 @@
               </td>
             </tr>
             <tr>
-              <td>١:٠٠  - ٢:٠٠ ظهرا</td>
+              <td><b>١:٠٠  - ٢:٠٠ ظهرا</b></td>
               <td style="line-height: 25px;">
               <b>"العرض التفاعلي: "الرحلة</b>
               <br> قاعة الأغراض المتعددة
