--- a/index.html
+++ b/index.html
@@ -73,16 +73,31 @@
               <td><b>١١:٠٠ صباحا - ١٢:٠٠ ظهرا</b></td>
               <td style="line-height: 25px;">
               <b>"العرض التفاعلي: "الرحلة</b>
-              <br> قاعة الأغراض المتعددة
+              <br> القاعة الكبرى
               <br>(المرحلة الاعدادية والثانوية)
               </td>
             </tr>
+             <tr>
+              <td><b>٢:٠٠ - ٣:٠٠ مساءا</b></td>
+              <td style="line-height: 25px;">
+                <b>العرض العلمى التفاعلى: ملكات هزت عرش مصر </b>
+                <br> القاعة الكبرى
+                </br>(جميع الفئات العمرية)
+              </td>
             <tr>
-              <td><b>١:٠٠  - ٢:٠٠ ظهرا</b></td>
+              <td><b>٣:٠٠  - ٤:٠٠ مساءا</b></td>
               <td style="line-height: 25px;">
               <b>"العرض التفاعلي: "الرحلة</b>
-              <br> قاعة الأغراض المتعددة
+              <br> القاعة الكبرى
                 <br>(المرحلة الاعدادية والثانوية)
+              </td>
+            </tr>
+            <tr>
+              <td><b>٤:٠٠ - ٥:٠٠ مساءا</b></td>
+              <td style="line-height: 25px;">
+                <b>العرض العلمى التفاعلى: ملكات هزت عرش مصر </b>
+                <br> القاعة الكبرى
+                </br>(جميع الفئات العمرية)
               </td>
             </tr>
           </table>
