--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </td>
             </tr>
             <tr>
-              <td><b>١١:٠٠ صباحا - ١٢:٠٠ ظهرا</b></td>
+              <td><b>١٢:٠٠ - ١:٠٠ ظهرا</b></td>
               <td style="line-height: 25px;">
               <b>"العرض التفاعلي: "الرحلة</b>
               <br> القاعة الكبرى
